--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -8,6 +8,8 @@ $color-secondary-dark: #ff7730;
 $color-tertiary-light: #2998ff;
 $color-tertiary-dark: #5643fa;
 
+$color-red: #fa5252;
+
 $gradient-primary: linear-gradient(
   to right bottom,
   $color-primary-light,
@@ -35,7 +37,11 @@ $gradient-primary-opaque: linear-gradient(
 $shadow-1: 0 2rem 3rem rgba(0, 0, 0, 0.2);
 
 $color-grey-dark-1: #777;
+$color-grey-dark-2: #333;
+
 $color-grey-light-1: #f7f7f7;
+$color-grey-light-2: #aaa;
+$color-grey-light-3: #ddd;
 
 $color-white: #fff;
 $color-black: #000;
