--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,8 +12,12 @@
 @import "components/card";
 @import "components/story";
 @import "components/bg-video";
+@import "components/form";
+@import "components/popup";
 
 @import "layouts/header";
 @import "layouts/grid";
+@import "layouts/footer";
+@import "layouts/navigation";
 
 @import "pages/home";
