--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ body {
 .u-background-green {
   background-color: #55c57a; }
 
-.btn:link, .btn:visited {
+.btn, .btn:link, .btn:visited {
   text-transform: uppercase;
   padding: 1.8rem 4rem;
   border-radius: 10rem;
@@ -126,14 +126,15 @@ body {
   text-decoration: none;
   display: inline-block;
   transition: all 0.5s;
-  position: relative; }
-  .btn:link:hover, .btn:visited:hover {
+  position: relative;
+  border: none; }
+  .btn:hover, .btn:link:hover, .btn:visited:hover {
     box-shadow: 0 1rem 1.5rem rgba(0, 0, 0, 0.25);
     transform: translateY(-5px);
     background-color: transparent; }
-  .btn:link:active, .btn:visited:active {
+  .btn:active, .btn:link:active, .btn:visited:active {
     transform: translateY(1px); }
-  .btn:link::after, .btn:visited::after {
+  .btn::after, .btn:link::after, .btn:visited::after {
     content: "";
     height: 100%;
     width: 100%;
@@ -144,7 +145,7 @@ body {
     left: 0;
     position: absolute;
     transition: all 0.5s; }
-  .btn:link:hover::after, .btn:visited:hover::after {
+  .btn:hover::after, .btn:link:hover::after, .btn:visited:hover::after {
     transform: scaleX(1.4) scaleY(1.6);
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.25);
     opacity: 0; }
@@ -395,6 +396,126 @@ body {
     width: 100%;
     object-fit: cover; }
 
+.form__input, .form__label {
+  display: block; }
+
+.form__group {
+  margin-bottom: 2rem; }
+
+.form__label {
+  font-size: 1.4rem;
+  font-weight: 600;
+  transform: translate(2rem, 0.5rem);
+  visibility: hidden;
+  transition: all 0.5s; }
+
+.form__input {
+  border: none;
+  width: 90%;
+  font-size: inherit;
+  padding: 1.5rem 2rem;
+  border-radius: 3px;
+  font-family: inherit;
+  border-bottom: 0.3rem solid transparent;
+  transition: all 0.5s; }
+  .form__input::placeholder {
+    color: #aaa; }
+  .form__input:placeholder-shown + label {
+    transform: translate(2rem, -2rem);
+    opacity: 0; }
+  .form__input:focus {
+    outline: none;
+    border-bottom: 0.3rem solid #55c57a; }
+  .form__input:focus:invalid {
+    border-bottom: 0.3rem solid #fa5252; }
+
+.form__group--radio {
+  width: 45%;
+  display: inline-block; }
+
+.form__radio {
+  display: none; }
+
+.form__radio-label {
+  position: relative;
+  padding-left: 4rem; }
+
+.form__radio-button {
+  display: inline-block;
+  height: 3rem;
+  width: 3rem;
+  border-radius: 50%;
+  border: 0.5rem solid #55c57a;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%); }
+  .form__radio-button::after {
+    content: "";
+    height: 1.5rem;
+    width: 1.5rem;
+    background-color: #55c57a;
+    border-radius: inherit;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0; }
+
+.form__radio:checked + .form__radio-label .form__radio-button::after {
+  opacity: 1; }
+
+.popup {
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2000;
+  background-color: rgba(0, 0, 0, 0.6);
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.5s; }
+  .popup:target {
+    opacity: 1;
+    visibility: visible; }
+  .popup:target .popup__content {
+    transform: translate(-50%, -50%) scale(1); }
+  .popup__close:link, .popup__close:visited {
+    text-decoration: none;
+    color: #777;
+    position: absolute;
+    top: 0;
+    right: 2rem;
+    font-size: 3rem; }
+  .popup__checkbox {
+    display: none; }
+  .popup__content {
+    width: 75%;
+    background-color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0.2);
+    border-radius: 3px;
+    overflow: hidden;
+    transition: all 0.5s 0.2s; }
+  .popup__text {
+    column-count: 2;
+    column-gap: 6rem;
+    column-rule: 2px solid #ddd;
+    font-size: 1.4rem; }
+  .popup__left {
+    width: 33.3333%;
+    display: table-cell; }
+    .popup__left img {
+      width: 100%;
+      display: block; }
+  .popup__right {
+    display: table-cell;
+    vertical-align: middle;
+    padding: 5rem; }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
@@ -437,6 +558,137 @@ body {
 .col-1-of-4 {
   width: calc((100% - 6rem* 3) / 4); }
 
+.footer {
+  color: #fff; }
+  .footer__list {
+    list-style: none; }
+    .footer__list li {
+      display: inline-block; }
+      .footer__list li:not(:last-child) {
+        margin-right: 1rem; }
+  .footer__link:link, .footer__link:visited {
+    color: white;
+    cursor: pointer;
+    text-decoration: none;
+    display: inline-block;
+    text-transform: uppercase;
+    font-size: 1.4rem;
+    transition: all 0.1s; }
+    .footer__link:link:hover, .footer__link:visited:hover {
+      transform: rotate(5deg) scale(1.2);
+      box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.2);
+      color: #55c57a; }
+  .footer__list, .footer__copyright {
+    display: inline-block;
+    border-top: 1px solid #777;
+    padding-top: 2rem; }
+  .footer__copyright {
+    width: 80%;
+    float: right; }
+
+.navigation__checkbox {
+  display: none; }
+
+.navigation__checkbox:checked ~ .navigation__background {
+  transform: scale(100); }
+
+.navigation__checkbox:checked ~ .nav {
+  opacity: 1;
+  visibility: visible;
+  transform: translate(0); }
+
+.navigation__checkbox:not(:checked) + .navigation__button:hover > * {
+  width: 4rem; }
+
+.navigation__button {
+  height: 7rem;
+  width: 7rem;
+  background-color: #fff;
+  border-radius: 50%;
+  position: fixed;
+  top: 6rem;
+  right: 6rem;
+  cursor: pointer;
+  z-index: 1000;
+  box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.2); }
+
+.navigation__checkbox:checked + .navigation__button .navigation__icon {
+  background-color: transparent; }
+
+.navigation__checkbox:checked + .navigation__button .navigation__icon::after {
+  transform: translateY(1rem) rotate(135deg); }
+
+.navigation__checkbox:checked + .navigation__button .navigation__icon::before {
+  transform: translateY(-1rem) rotate(-135deg); }
+
+.navigation__icon {
+  height: 0.15rem;
+  width: 3rem;
+  background-color: #333;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: width 0.5s; }
+  .navigation__icon::after, .navigation__icon::before {
+    content: "";
+    height: inherit;
+    width: inherit;
+    background-color: #333;
+    position: absolute;
+    transition: all 0.5s; }
+  .navigation__icon::after {
+    top: -1rem; }
+  .navigation__icon::before {
+    top: 1rem; }
+
+.navigation__background {
+  border-radius: 50%;
+  height: 5rem;
+  width: 5rem;
+  z-index: 998;
+  background-image: radial-gradient(#55c57a, #7ed56f);
+  position: fixed;
+  top: 7rem;
+  right: 7rem;
+  transition: all cubic-bezier(0.83, 0, 0.17, 1) 1s; }
+
+.navigation .nav {
+  z-index: 999;
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  visibility: hidden;
+  transform: translateX(-150rem);
+  transition: all cubic-bezier(0.68, -0.6, 0.32, 1.6) 0.8s; }
+  .navigation .nav__list {
+    list-style: none;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
+    .navigation .nav__list li {
+      margin-bottom: 3rem; }
+    .navigation .nav__list span {
+      margin-right: 1rem; }
+  .navigation .nav__link {
+    font-weight: 300;
+    font-size: 3rem;
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    padding: 2rem;
+    background-image: linear-gradient(125deg, transparent 50%, #fff 50%);
+    background-size: 225%;
+    transition: all 0.5s; }
+    .navigation .nav__link:hover {
+      color: #55c57a;
+      background-position: 100%; }
+
 .section-about {
   background-color: #f7f7f7;
   padding: 25rem 0;
@@ -463,10 +715,19 @@ body {
 .section-book {
   padding: 20rem;
   background-image: linear-gradient(to right bottom, #7ed56f, #28b485); }
-  .section-book .form__book {
+  .section-book .book {
     height: 50rem;
-    width: 100%;
+    transition: all 1.5s;
     background-image: linear-gradient(110deg, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../img/nat-10.jpg);
     background-size: cover;
     box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.2);
     border-radius: 3px; }
+    .section-book .book:focus-within {
+      background-position: bottom; }
+    .section-book .book__form {
+      width: 50%;
+      padding: 6rem; }
+
+.footer {
+  background-color: #333;
+  padding: 10rem; }
