--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,4 +1,5 @@
 .btn {
+  &,
   &:link,
   &:visited {
     text-transform: uppercase;
@@ -9,6 +10,7 @@
     display: inline-block;
     transition: all 0.5s;
     position: relative;
+    border: none;
 
     &:hover {
       box-shadow: 0 1rem 1.5rem rgba($color-black, 0.25);
