--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -10,7 +10,7 @@
     display: inline-block;
     transition: all 0.5s;
     position: relative;
-    border: none;
+    border: 1px solid transparent;
 
     &:hover {
       box-shadow: 0 1rem 1.5rem rgba($color-black, 0.25);
@@ -50,7 +50,6 @@
   &--white {
     background-color: $color-white;
     color: $color-grey-dark-1;
-    border: 1px solid $color-white;
 
     &:hover {
       color: $color-white;
