--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -8,9 +8,20 @@
 
 html {
   font-size: 62.5%;
+
+  @include respond(tab-land) {
+    font-size: 56.25%;
+  }
+  @include respond(tab-port) {
+    font-size: 50%;
+  }
 }
 
 body {
   padding: 3.5rem;
   box-sizing: border-box;
+
+  @include respond(tab-port) {
+    padding: 0;
+  }
 }
