--- a/css/style.css
+++ b/css/style.css
@@ -33,24 +33,21 @@
   padding: 0;
   box-sizing: inherit; }
 
-/*
-res          type          font-size  
-
-0-600px:     Phone         8px
-600-900px    tab-port      8px
-900-1200px   tab-land      9px
-[1200-1800]  normal        10px
-1800px+      big-desktop
-*/
 html {
   font-size: 62.5%; }
-  @media (max-width: 37.5em) {
+  @media only screen and (max-width: 75em) {
+    html {
+      font-size: 56.25%; } }
+  @media only screen and (max-width: 56.25em) {
     html {
       font-size: 50%; } }
 
 body {
   padding: 3.5rem;
   box-sizing: border-box; }
+  @media only screen and (max-width: 56.25em) {
+    body {
+      padding: 0; } }
 
 body {
   font-family: "Lato", sans-serif;
@@ -70,12 +67,23 @@ body {
     font-weight: 400;
     display: block;
     animation: moveInLeft 1s ease-out; }
+    @media only screen and (max-width: 56.25em) {
+      .heading-primary__main {
+        font-size: 6rem;
+        letter-spacing: 1rem; } }
   .heading-primary__sub {
     font-size: 2.5rem;
     letter-spacing: 2rem;
     font-weight: 700;
     display: block;
     animation: moveInRight 1s ease-out; }
+    @media only screen and (max-width: 56.25em) {
+      .heading-primary__sub {
+        font-size: 1.5rem;
+        letter-spacing: 1rem; } }
+    @media only screen and (max-width: 37.5em) {
+      .heading-primary__sub {
+        font-size: 1.5rem; } }
 
 .heading-secondary {
   text-transform: uppercase;
@@ -87,7 +95,10 @@ body {
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
-  transition: all 2s; }
+  transition: letter-spacing 2s; }
+  @media only screen and (max-width: 56.25em) {
+    .heading-secondary {
+      font-size: 2.8rem; } }
 
 .heading-tertiary {
   text-transform: uppercase;
@@ -112,9 +123,6 @@ body {
 .u-margin-bottom-huge {
   margin-bottom: 8rem; }
 
-.u-letter-spacing-small {
-  letter-spacing: 1rem; }
-
 .u-margin-top-small {
   margin-top: 1.5rem; }
 
@@ -129,6 +137,12 @@ body {
 
 .u-background-green {
   background-color: #55c57a; }
+
+.u-letter-spacing-small {
+  letter-spacing: 1rem; }
+  @media only screen and (max-width: 56.25em) {
+    .u-letter-spacing-small {
+      letter-spacing: 00.5rem; } }
 
 .btn, .btn:link, .btn:visited {
   text-transform: uppercase;
@@ -200,15 +214,35 @@ body {
     position: absolute;
     border-radius: 0.5rem;
     transition: all 0.2s; }
+    @media only screen and (max-width: 56.25em) {
+      .composition__photo {
+        position: relative;
+        float: left;
+        width: 33.33333%; } }
     .composition__photo-1 {
       top: -2rem;
       left: 0; }
+      @media only screen and (max-width: 56.25em) {
+        .composition__photo-1 {
+          top: 0;
+          transform: scale(1.1); } }
     .composition__photo-2 {
       top: 2rem;
       right: 0; }
+      @media only screen and (max-width: 56.25em) {
+        .composition__photo-2 {
+          top: 0;
+          left: 0;
+          transform: scale(1.3);
+          z-index: 1; } }
     .composition__photo-3 {
       top: 10rem;
       left: 20%; }
+      @media only screen and (max-width: 56.25em) {
+        .composition__photo-3 {
+          top: 0;
+          left: 0;
+          transform: scale(1.1); } }
     .composition__photo:hover {
       transform: scale(1.1);
       z-index: 1;
@@ -220,9 +254,6 @@ body {
 .features:hover > * > * {
   background-color: rgba(255, 255, 255, 0.5);
   transform: translateY(2rem); }
-
-.features {
-  height: 0; }
 
 .feature-box {
   background-color: rgba(255, 255, 255, 0.8);
@@ -286,13 +317,12 @@ body {
     .card__image--3 {
       background-image: linear-gradient(to right bottom, #2998ff, #5643fa), url(../img/nat-7.jpg); }
   .card__heading {
-    display: inline-block;
     color: #fff;
     text-transform: uppercase;
     position: absolute;
     top: 12rem;
     right: 2rem;
-    font-size: 3rem;
+    font-size: 2.8rem;
     font-weight: 300;
     width: 75%;
     text-align: right; }
@@ -333,6 +363,35 @@ body {
     .card__price__value {
       font-size: 6rem;
       font-weight: 300; }
+  @media only screen and (hover: none) {
+    .card {
+      height: auto;
+      background-color: white;
+      box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.2); }
+      .card__side {
+        position: relative;
+        backface-visibility: visible; }
+        .card__side--front {
+          box-shadow: none; }
+        .card__side--back {
+          clip-path: polygon(0 20%, 100% 0, 100% 100%, 0 100%);
+          transform: rotateY(0);
+          z-index: 9; }
+      .card:hover .card__side--front {
+        transform: rotateY(0); }
+      .card__cta {
+        position: relative;
+        top: 0;
+        left: 0;
+        transform: translate(0);
+        padding: 5rem 0; }
+      .card__price {
+        margin-bottom: 1rem; }
+        .card__price__only {
+          font-size: 1.5rem; }
+        .card__price__value {
+          font-size: 6rem;
+          font-weight: 100; } }
 
 .card-hover .card__side--front {
   transform: rotateY(-160deg); }
@@ -347,12 +406,18 @@ body {
   border-radius: 3px;
   margin: 0 auto;
   transform: skew(-15deg);
-  background-image: linear-gradient(rgba(255, 255, 255, 0.1) 25%, #fff);
-  transition: all 1s; }
-  .story:hover {
-    transform: skew(-15deg) translateX(5rem); }
+  background-image: linear-gradient(rgba(255, 255, 255, 0.1) 25%, #fff); }
+  @media only screen and (max-width: 56.25em) {
+    .story {
+      width: 100%; } }
+  @media only screen and (max-width: 37.5em) {
+    .story {
+      transform: skew(0); } }
   .story > * {
     transform: skew(15deg); }
+    @media only screen and (max-width: 37.5em) {
+      .story > * {
+        transform: skew(0); } }
   .story__img {
     height: 15rem;
     width: 15rem;
@@ -476,6 +541,14 @@ body {
 .form__radio:checked + .form__radio-label .form__radio-button::after {
   opacity: 1; }
 
+@media only screen and (max-width: 56.25em) {
+  .form__input {
+    width: 100%; }
+  .form__group--radio {
+    width: 100%;
+    display: block;
+    margin-bottom: 1rem; } }
+
 .popup {
   height: 100vh;
   width: 100%;
@@ -486,6 +559,8 @@ body {
   background-color: rgba(0, 0, 0, 0.6);
   opacity: 0;
   visibility: hidden;
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
   transition: all 0.5s; }
   .popup:target {
     opacity: 1;
@@ -534,6 +609,9 @@ body {
   background-size: cover;
   background-position: top;
   position: relative; }
+  @media only screen and (max-width: 37.5em) {
+    .header {
+      clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%); } }
   .header__logo-box {
     position: absolute;
     top: 4.5rem;
@@ -548,17 +626,28 @@ body {
     text-align: center; }
 
 .row {
-  width: 114rem;
+  max-width: 114rem;
   margin: 0 auto; }
   .row::after {
     content: "";
     clear: both;
     display: table; }
+  @media only screen and (max-width: 56.25em) {
+    .row {
+      max-width: 50rem;
+      padding: 0 3rem; } }
 
 [class^="col-"] {
   float: left; }
   [class^="col-"]:not(:last-child) {
     margin-right: 6rem; }
+    @media only screen and (max-width: 56.25em) {
+      [class^="col-"]:not(:last-child) {
+        margin-right: 0; } }
+  @media only screen and (max-width: 56.25em) {
+    [class^="col-"] {
+      width: 100% !important;
+      margin-bottom: 5rem; } }
 
 .col-1-of-2 {
   width: calc((100% - 6rem) / 2); }
@@ -573,12 +662,16 @@ body {
   color: #fff; }
   .footer__list {
     list-style: none; }
+    @media only screen and (max-width: 56.25em) {
+      .footer__list {
+        width: 80%;
+        display: inline-block; } }
     .footer__list li {
       display: inline-block; }
       .footer__list li:not(:last-child) {
         margin-right: 1rem; }
   .footer__link:link, .footer__link:visited {
-    color: white;
+    color: #fff;
     cursor: pointer;
     text-decoration: none;
     display: inline-block;
@@ -589,13 +682,20 @@ body {
       transform: rotate(5deg) scale(1.2);
       box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.2);
       color: #55c57a; }
-  .footer__list, .footer__copyright {
+  .footer__navigation, .footer__copyright {
     display: inline-block;
     border-top: 1px solid #777;
     padding-top: 2rem; }
+    @media only screen and (max-width: 56.25em) {
+      .footer__navigation, .footer__copyright {
+        display: block;
+        text-align: center; } }
   .footer__copyright {
     width: 80%;
     float: right; }
+    @media only screen and (max-width: 56.25em) {
+      .footer__copyright {
+        width: 100%; } }
 
 .navigation__checkbox {
   display: none; }
@@ -622,6 +722,10 @@ body {
   cursor: pointer;
   z-index: 1000;
   box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.2); }
+  @media only screen and (max-width: 56.25em) {
+    .navigation__button {
+      top: 4rem;
+      right: 4rem; } }
 
 .navigation__checkbox:checked + .navigation__button .navigation__icon {
   background-color: transparent; }
@@ -662,7 +766,11 @@ body {
   position: fixed;
   top: 7rem;
   right: 7rem;
-  transition: all cubic-bezier(0.83, 0, 0.17, 1) 1s; }
+  transition: transform cubic-bezier(0.83, 0, 0.17, 1) 1s; }
+  @media only screen and (max-width: 56.25em) {
+    .navigation__background {
+      top: 5rem;
+      right: 5rem; } }
 
 .navigation .nav {
   z-index: 999;
@@ -704,6 +812,9 @@ body {
   background-color: #f7f7f7;
   padding: 25rem 0;
   margin-top: -20vh; }
+  @media only screen and (max-width: 56.25em) {
+    .section-about {
+      padding: 20rem 0; } }
 
 .section-features {
   min-height: 75rem;
@@ -713,31 +824,48 @@ body {
   transform: skewY(-7deg) translateY(-12rem); }
   .section-features > * {
     transform: skewY(7deg); }
+  @media only screen and (max-width: 56.25em) {
+    .section-features {
+      padding: 10rem 0; } }
 
 .section-tours {
   background-color: #f7f7f7;
   padding: 30rem 0 15rem 0;
   margin-top: -24rem; }
+  @media only screen and (max-width: 56.25em) {
+    .section-tours {
+      padding: 20rem 0 10rem 0; } }
 
 .section-stories {
   padding: 15rem 0;
   position: relative; }
 
 .section-book {
-  padding: 20rem;
+  padding: 20rem 0;
   background-image: linear-gradient(to right bottom, #7ed56f, #28b485); }
   .section-book .book {
-    height: 50rem;
     transition: all 1.5s;
     background-image: linear-gradient(110deg, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../img/nat-10.jpg);
     background-size: cover;
     box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.2);
     border-radius: 3px; }
+    @media only screen and (max-width: 75em) {
+      .section-book .book {
+        background-image: linear-gradient(110deg, rgba(255, 255, 255, 0.9) 75%, transparent 50%), url(../img/nat-10.jpg); } }
+    @media only screen and (max-width: 56.25em) {
+      .section-book .book {
+        background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9) 100%, transparent 0%), url(../img/nat-10.jpg); } }
     .section-book .book:focus-within {
       background-position: bottom; }
     .section-book .book__form {
       width: 50%;
       padding: 6rem; }
+      @media only screen and (max-width: 75em) {
+        .section-book .book__form {
+          width: 75%; } }
+      @media only screen and (max-width: 56.25em) {
+        .section-book .book__form {
+          width: 100%; } }
 
 .footer {
   background-color: #333;
