--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -18,6 +18,11 @@ body {
     font-weight: 400;
     display: block;
     animation: moveInLeft 1s ease-out;
+
+    @include respond(tab-port) {
+      font-size: 6rem;
+      letter-spacing: 1rem;
+    }
   }
 
   &__sub {
@@ -26,6 +31,14 @@ body {
     font-weight: 700;
     display: block;
     animation: moveInRight 1s ease-out;
+
+    @include respond(tab-port) {
+      font-size: 1.5rem;
+      letter-spacing: 1rem;
+    }
+    @include respond(phone) {
+      font-size: 1.5rem;
+    }
   }
 }
 
@@ -39,7 +52,11 @@ body {
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
-  transition: all 2s;
+  transition: letter-spacing 2s;
+
+  @include respond(tab-port) {
+    font-size: 2.8rem;
+  }
 }
 
 .heading-tertiary {
