--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -62,13 +62,12 @@
   }
 
   &__heading {
-    display: inline-block;
     color: $color-white;
     text-transform: uppercase;
     position: absolute;
     top: 12rem;
     right: 2rem;
-    font-size: 3rem;
+    font-size: 2.8rem;
     font-weight: 300;
     width: 75%;
     text-align: right;
@@ -127,6 +126,52 @@
     &__value {
       font-size: 6rem;
       font-weight: 300;
+    }
+  }
+
+  @media only screen and (hover: none) {
+    height: auto;
+    background-color: white;
+    box-shadow: $shadow-1;
+
+    &__side {
+      position: relative;
+      backface-visibility: visible;
+
+      &--front {
+        box-shadow: none;
+      }
+
+      &--back {
+        clip-path: polygon(0 20%, 100% 0, 100% 100%, 0 100%);
+        transform: rotateY(0);
+        z-index: 9;
+      }
+    }
+
+    &:hover &__side--front {
+      transform: rotateY(0);
+    }
+
+    &__cta {
+      position: relative;
+      top: 0;
+      left: 0;
+      transform: translate(0);
+      padding: 5rem 0;
+    }
+
+    &__price {
+      margin-bottom: 1rem;
+
+      &__only {
+        font-size: 1.5rem;
+      }
+
+      &__value {
+        font-size: 6rem;
+        font-weight: 100;
+      }
     }
   }
 }
