--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -7,19 +7,43 @@
     border-radius: 0.5rem;
     transition: all 0.2s;
 
+    @include respond(tab-port) {
+      position: relative;
+      float: left;
+      width: 33.33333%;
+    }
+
     &-1 {
       top: -2rem;
       left: 0;
+
+      @include respond(tab-port) {
+        top: 0;
+        transform: scale(1.1);
+      }
     }
 
     &-2 {
       top: 2rem;
       right: 0;
+
+      @include respond(tab-port) {
+        top: 0;
+        left: 0;
+        transform: scale(1.3);
+        z-index: 1;
+      }
     }
 
     &-3 {
       top: 10rem;
       left: 20%;
+
+      @include respond(tab-port) {
+        top: 0;
+        left: 0;
+        transform: scale(1.1);
+      }
     }
 
     &:hover {
