--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -6,6 +6,10 @@
   background-position: top;
   position: relative;
 
+  @include respond(phone) {
+    clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+  }
+
   &__logo-box {
     position: absolute;
     top: 4.5rem;
