--- a/sass/layouts/_navigation.scss
+++ b/sass/layouts/_navigation.scss
@@ -28,6 +28,11 @@
     cursor: pointer;
     z-index: 1000;
     box-shadow: $shadow-1;
+
+    @include respond(tab-port) {
+      top: 4rem;
+      right: 4rem;
+    }
   }
 
   &__checkbox:checked + &__button &__icon {
@@ -77,7 +82,12 @@
     position: fixed;
     top: 7rem;
     right: 7rem;
-    transition: all cubic-bezier(0.83, 0, 0.17, 1) 1s;
+    transition: transform cubic-bezier(0.83, 0, 0.17, 1) 1s;
+
+    @include respond(tab-port) {
+      top: 5rem;
+      right: 5rem;
+    }
   }
 
   .nav {
