--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -2,6 +2,10 @@
   background-color: $color-grey-light-1;
   padding: 25rem 0;
   margin-top: -20vh;
+
+  @include respond(tab-port) {
+    padding: 20rem 0;
+  }
 }
 
 .section-features {
@@ -15,12 +19,20 @@
   & > * {
     transform: skewY(7deg);
   }
+
+  @include respond(tab-port) {
+    padding: 10rem 0;
+  }
 }
 
 .section-tours {
   background-color: $color-grey-light-1;
   padding: 30rem 0 15rem 0;
   margin-top: -24rem;
+
+  @include respond(tab-port) {
+    padding: 20rem 0 10rem 0;
+  }
 }
 
 .section-stories {
@@ -29,11 +41,10 @@
 }
 
 .section-book {
-  padding: 20rem;
+  padding: 20rem 0;
   background-image: $gradient-primary;
 
   .book {
-    height: 50rem;
     transition: all 1.5s;
 
     background-image: linear-gradient(
@@ -46,6 +57,24 @@
     box-shadow: $shadow-1;
     border-radius: 3px;
 
+    @include respond(tab-land) {
+      background-image: linear-gradient(
+          110deg,
+          rgba($color-white, 0.9) 75%,
+          transparent 50%
+        ),
+        url(../img/nat-10.jpg);
+    }
+
+    @include respond(tab-port) {
+      background-image: linear-gradient(
+          to right,
+          rgba($color-white, 0.9) 100%,
+          transparent 0%
+        ),
+        url(../img/nat-10.jpg);
+    }
+
     &:focus-within {
       background-position: bottom;
     }
@@ -53,6 +82,14 @@
     &__form {
       width: 50%;
       padding: 6rem;
+
+      @include respond(tab-land) {
+        width: 75%;
+      }
+
+      @include respond(tab-port) {
+        width: 100%;
+      }
     }
   }
 }
