--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -8,12 +8,18 @@
 
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
 
   @include respond(tab-land) {
     font-size: 56.25%;
   }
+
   @include respond(tab-port) {
     font-size: 50%;
+  }
+
+  @include respond(big-desktop) {
+    font-size: 75%;
   }
 }
 
@@ -24,4 +30,9 @@ body {
   @include respond(tab-port) {
     padding: 0;
   }
+}
+
+::selection {
+  background-color: $color-primary;
+  color: $color-white;
 }
