--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -13,31 +13,29 @@ body {
   backface-visibility: hidden;
 
   &__main {
-    font-size: 7rem;
+    font-size: 6rem;
     letter-spacing: 4.5rem;
     font-weight: 400;
     display: block;
     animation: moveInLeft 1s ease-out;
 
     @include respond(tab-port) {
-      font-size: 6rem;
+      font-size: 5rem;
       letter-spacing: 1rem;
     }
   }
 
   &__sub {
-    font-size: 2.5rem;
+    font-size: 2rem;
     letter-spacing: 2rem;
     font-weight: 700;
     display: block;
     animation: moveInRight 1s ease-out;
 
     @include respond(tab-port) {
-      font-size: 1.5rem;
-      letter-spacing: 1rem;
-    }
-    @include respond(phone) {
-      font-size: 1.5rem;
+      font-size: 2rem;
+      letter-spacing: 0.5rem;
+      font-weight: 900;
     }
   }
 }
