--- a/sass/layouts/_navigation.scss
+++ b/sass/layouts/_navigation.scss
@@ -103,6 +103,7 @@
     transition: all cubic-bezier(0.68, -0.6, 0.32, 1.6) 0.8s;
 
     &__list {
+      width: 100%;
       list-style: none;
       text-align: center;
       position: absolute;
@@ -120,19 +121,22 @@
     }
 
     &__link {
-      font-weight: 300;
-      font-size: 3rem;
-      color: $color-white;
-      text-decoration: none;
-      text-transform: uppercase;
-      padding: 2rem;
-      background-image: linear-gradient(
-        125deg,
-        transparent 50%,
-        $color-white 50%
-      );
-      background-size: 225%;
-      transition: all 0.5s;
+      &:link,
+      &:visited {
+        font-weight: 300;
+        font-size: 3rem;
+        color: $color-white;
+        text-decoration: none;
+        text-transform: uppercase;
+        padding: 2rem;
+        background-image: linear-gradient(
+          125deg,
+          transparent 50%,
+          $color-white 50%
+        );
+        background-size: 225%;
+        transition: all 0.5s;
+      }
 
       &:hover {
         color: $color-primary;
